--- a/resources/style.css
+++ b/resources/style.css
@@ -8,62 +8,62 @@ body {
 
 /* Main Bannner */
 
-.main-banner{
+/*.main-banner{
   background-image: url("../resources/images/banner_3.png");
   width: 100%;
   height: 710px;
-}
+}*/
 
-.container {
+/*.container {
   display: flex;
   align-items: center;
   width: 1000px;
   margin: auto;
   /*border: 2px solid red;*/
-}
+}*/
 
-.logo {
+/*.logo {
   /*border: 2px solid red;*/
-}
+}*/
 
-.company-name {
+/*.company-name {
   /*border: 2px solid red;*/
   color: white;
   text-align: center;
   width: 30%;
   line-height: 5px;
   margin-left: 1em;
-}
+}*/
 
-.nav-container {
-  /*border: 2px solid red;*/
+/*.nav-container {*/
+  /*border: 2px solid red;
   width: 100%;
   justify-content: flex-end;
   display: flex;
-}
+}*/
 
-nav {
+/*nav {
   display: flex;
   text-align: right;
   justify-content: space-between;
   /*border: 2px solid red;*/
   color: white;
   list-style-type: none;
-  width: 50%;
+  width: 50%;*/
 }
 
-nav ul li {
+/*nav ul li {
   display: flex;
   justify-content: space-between;
   margin-left: 20px;
-}
+}*/
 
-.headline {
+/*.headline {
   /*border: 2px solid red;*/
   color: white;
   text-align: center;
   margin-top: 15em;
-}
+}*/
 
 /* Top Offerings */
 
@@ -182,3 +182,11 @@ footer img {
 .footer-right li {
   margin-right: 2em;
 }
+
+/* Media Queries*/
+
+/*@media only screen and (max-width:768px) {
+  .nav li {
+    max-width: 100%;
+  }
+}*/
