--- a/resources/home.css
+++ b/resources/home.css
@@ -1,13 +1,204 @@
+/*Universal*/
+
+body {
+  margin: 0;
+  padding: 0;
+}
+
+html {
+  font-size: 16px;
+}
+
+.container {
+  width: 70em;
+  margin: auto;
+}
+
+ul {
+  padding: 0;
+  list-style-type: none;
+}
+
 /* Main Banner */
-.logo img {
-  display: inline-block;
+
+.main-banner {
+  background-image: url("../resources/images/banner_3.png");
+  width: 100%;
+  height: 44em;
+}
+
+.headline {
+  color: white;
+  margin-top: 24%;
+  text-align: center;
+  font-size: 1.5em;
+  font-family: garamond;
+}
+
+.headline p {
+  font-family: "nunito", sans serif;
+  font-weight: 400;
+}
+
+/* Navigation */
+
+nav img {
+  /*border: 2px solid red;*/
+}
+
+.company-name {
+  /*border: 2px solid red;*/
+  text-align: center;
+  line-height: .3em;
+  width: 25%;
+  margin-right: 15em;
+}
+
+.company-name h1 {
+  font-family: 'Nunito', sans serif;
+  font-weight: 700;
+  font-size: 1.37em;
+}
+
+.company-name span {
+  font-family: garamond;
+  font-size: 1.3
 }
 
 nav {
+  /*border: 2px solid red;*/
   display: flex;
+  justify-content: space-between;
+  color: white;
 }
 
 nav ul {
+  /*border: 2px solid red;*/
   display: flex;
+  justify-content: flex-end;
+  align-items: center;
   list-style-type: none;
+  margin-left:
+
+}
+
+nav li {
+  font-family: "nunito", sans serif;
+  font-weight: 530;
+  font-size: 0.85em;
+  margin-left: 2em;
+}
+
+/* Top Section*/
+
+.top-section {
+  display: flex;
+}
+
+.top-left h1 {
+  font-family: "nunito", sans serif;
+}
+
+.top-left p {
+  font-family: garamond;
+}
+
+.top-right p {
+  font-size: 1.5em;
+}
+
+.top-left {
+  /*border: 2px solid red;*/
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+  height: 44em;
+}
+
+.top-left-content {
+  width: 60%;
+}
+
+.top-left-content h1 {
+  margin-bottom: -.2em;
+}
+
+.top-right {
+  /*border: 2px solid red;*/
+  width: 50%;
+  height: 44em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  line-height: 5em;
+  text-align: center;
+  background-color: #f8f8f8;
+}
+
+.top-right-content h2 {
+  margin-top: -1em;
+}
+
+/* Bottom Section */
+
+.bottom-section {
+  display: flex;
+}
+
+.bottom-left {
+  /*border: 2px solid red;*/
+  width: 50%;
+  height: 44em;
+  background-image: url("../resources/images/cafe.png");
+}
+
+.bottom-right{
+  width: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.bottom-right-content {
+  width: 60%;
+}
+
+.bottom-right-content h1 {
+  margin-bottom: -.2em;
+  font-family: "nunito", sans serif;
+}
+
+/* Footer */
+
+footer {
+  /*border: 2px solid red;*/
+  height: 7.5em;
+  display: flex;
+  background-color: black;
+}
+
+.footer-content {
+  /*border: 2px solid red;*/
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 2.5em;
+  color: white;
+}
+
+.footer-content ul li {
+  display: inline;
+  margin-left: 3em;
+}
+
+.footer-content img {
+  margin-left: 3em;
+}
+
+footer li {
+  font-family: "nunito", sans serif;
+  font-weight: 530;
+  font-size: 0.85em;
 }
