--- a/resources/home.css
+++ b/resources/home.css
@@ -65,6 +65,10 @@ nav img {
   font-size: 1.3
 }
 
+.hamburger {
+  display: none;
+}
+
 nav {
   /*border: 2px solid red;*/
   display: flex;
@@ -202,3 +206,46 @@ footer li {
   font-weight: 530;
   font-size: 0.85em;
 }
+
+/* Phonne Media Queries */
+
+  /* Header */
+
+  @media screen and (max-width: 640px) {
+
+   .main-banner {
+     background-image: none;
+     height: 5.5em;
+     max-width: 100%:
+   }
+
+   .headline {
+     display: none;
+   }
+
+   .company-name {
+     /*border: 2px solid red;*/
+     color: black;
+     width: 40%;
+   }
+
+   .container {
+     width: 40em;
+     flex-shrink: 2;
+   }
+
+   nav {
+     max-width: 100%;
+   }
+
+   nav ul {
+     display: none;
+   }
+
+   .hamburger {
+    display: flex;
+    align-items: center;
+    margin-right: 1.5em;
+   }
+
+  }
