--- a/resources/home.css
+++ b/resources/home.css
@@ -19,6 +19,11 @@ ul {
   list-style-type: none;
 }
 
+a {
+  color: inherit;
+  text-decoration: inherit;
+}
+
 /* Main Banner */
 
 .main-banner {
